# juin23_bde_opa

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  api.Dockerfile  app_secrets.py  data_report.Dockerfile  data_report.py  demo.md  docker-compose.yml  financial_data_reader.Dockerfile  financial_data_reader.py  jupyter.Dockerfile  mongo-init.js  mypy.ini  pdm.Dockerfile  providers.py  pyproject.toml  python.Dockerfile  requirements-api.txt  requirements-data_report.txt  requirements-dev.txt  requirements-financial_data_reader.txt  requirements.txt  run_local.sh  secrets.sh  settings.toml  setup-hooks.sh  setup-local.sh  storage.py  tests.Dockerfile  utils.py
.github/workflows/: format.yml  static_analysis.yml  tests_functional.yml  tests_unit.yml
app_data/db/config/: mongo-init.js
data/: README.md  new_method_log.txt  old_method_log.txt
data/examples/: fmpcloud_AAPL_15min.json  fmpcloud_AAPL_history.json
docs/: data_report.adoc  data_storage.adoc  deploying.adoc  dev+deployment.adoc  financial_data_retrieval.adoc  http_api.adoc  notes_on_dash.md  opa.adoc  opa.css  scope.adoc  stock_market_providers.md
docs/graphs/: architecture.graphml
docs/images/graphs/: architecture.graphml  architecture_db.graphml  architecture_nothing.graphml  architecture_only_ext.graphml
docs/presentation/: README.md  do_demo.sh  index.html  slides.css  slides.md
docs/report/: data_report.adoc  data_storage.adoc  dev+deployment.adoc  financial_data_retrieval.adoc  http_api.adoc  machine_learning.adoc  opa.adoc
financial_data_reader/: Dockerfile  __main__.py  providers.py  secrets.py
notebooks/: dash_experiments.ipynb  stock_market_providers.ipynb
opa/: api.py  app_secrets.py  data_report.py  env.py  financial_data.py  financial_data_reader.py  http_methods.py  providers.py  shell.py  storage.py
opa/assets/: dash.css
opa/core/: __init__.py  env.py  financial_data.py  financial_data_reader.py  providers.py  storage.py
opa/notebooks/: demo.ipynb
opa/providers/: __init__.py  abstract.py  alphavantage.py  fmp_cloud.py
opa/storage/: __init__.py  abstract.py  mongodb.py
snippets/: providers.py
src/opa/: __init__.py  api.py  auth.py  config.py  data_report.py  financial_data_reader.py  http_methods.py  shell.py  vega.js  vega.py
src/opa/assets/: dash.css
src/opa/core/: __init__.py  auth.py  env.py  financial_data.py  providers.py  (+2 more)
tests/: fixtures.py
tests/functional/: test_api.py
tests/integration/: test_storage.py
tests/unit/: test_reader.py
(+5 files in other folders)
