[project]
name = "opa"
version = "0.1"
description = ""
authors = [
    {name = "jherve", email = "julien.jev.herve@gmail.com"},
]
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.1.1",
    "dynaconf>=3.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
storage = [
    "pymongo>=4.4.1",
]
data_report = [
    "dash>=2.11.1",
    "pandas>=2.0.3",
    "setuptools>=68.0.0",
]
financial_reader = [
    "requests-cache>=1.1.0",
]
api = [
    "fastapi[all]>=0.100.1",
]
tests_functional = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
]
tests_integration = [
    "pytest>=7.4.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "ipython>=8.14.0",
    "mypy>=1.4.1",
    "types-requests>=2.31.0.2",
    "pandas-stubs>=2.0.2.230605",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = "tests"
