[project]
name = "opa"
version = "0.2.0"
description = ""
authors = [
    {name = "jherve", email = "julien.jev.herve@gmail.com"},
]
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.1.1",
    "dynaconf>=3.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
storage = [
    "pymongo>=4.4.1",
]
data_report = [
    "dash>=2.11.1",
    "pandas>=2.0.3",
    "setuptools>=68.0.0",
]
financial_reader = [
    "requests-cache>=1.1.0",
]
api = [
    "fastapi[all]>=0.100.1",
]
tests_functional = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
]
test = [
    "pytest-mock>=3.11.1",
    "pytest>=7.4.0",
    "pytest-randomly>=3.13.0",
    "faker>=19.3.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "ipython>=8.14.0",
    "mypy>=1.4.1",
    "types-requests>=2.31.0.2",
    "pandas-stubs>=2.0.2.230605",
    "pytest>=7.4.0",
    "tbump>=6.10.0",
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.tbump]
github_url = "https://github.com/DataScientest-Studio/juin23_bde_opa"

[tool.tbump.version]
current = "0.2.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "[chore] Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "dash",
    "plotly",
    "plotly.express",
    "plotly.graph_objects",
    "dynaconf"
]
ignore_missing_imports = true
